<resources>
    <string name="app_name">Event on the day</string>
    <string name="tab_text_calendar">CALENDAR</string>
    <string name="tab_text_preset">PRESET</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_event">EVENT</string>
    <string name="facebook_app_id">1259751960796500</string>
    <string name="fb_login_protocol_scheme">fb1259751960796500</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_events">add_events</string>
    <string name="title_activity_view_event">ViewEventActivity</string>
...
